fix sonar qube bug